feat: 특정 상점 메뉴 조회 테스트코드 작성